# RaylibMinigame

./: .gitmodules  CMakeLists.txt  README.md  RaylibMinigame.sln  RaylibMinigame.vcxproj  RaylibMinigame.vcxproj.filters
export/: CMakeLists.txt
libs/: CMakeLists.txt
source/: main.c  rlights.h
sources/: main.cpp
x64-Debug/: lighting.fs  lighting_instancing.vs
